Add some recipes content

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <div class="card card-dark" id="card4">
       <div class="card-body">
-        <h3 class="card-title dark-text">Life with gluten-free diet?</h3>
+        <h3 class="card-title dark-text">Life with gluten-free diet</h3>
         <p class="card-text dark-text"><strong>Living with a gluten-free diet may sometimes feel challenging, but remember, you
           are taking control of your health and well-being, which is an incredible act of self-care. Every meal you
           choose is a step towards a healthier, happier you. Embrace the journey with confidence, knowing that you are
