--- a/recipe.html
+++ b/recipe.html
@@ -73,18 +73,193 @@
 
     <!-- Main Section -->
     <main>
-        <div class="recipe-content">
-            <div class="card card-light" id="recipes-header-card">
-                <img src="assets/images/eating-delicous.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h3 class="card-title dark-text">Let's enjoy delicious recipes!</h3>
 
-                    <p class="card-body dark-text">Here you are some delicious gluten-free recipe ideas that you can
-                        try,
-                        whether you are looking for breakfast, lunch, dinner, or even snacks.</p>
+        <!-- Section for (Cold Cucumber Soup) Recipe -->
+        <div class="recipe-content" id="one">
+            <div class="card card-light" id="recipes-header-card">
+                <img src="assets/images/recipes/cold-cucumber-soup.jpg" class="card-img-top recipe-details-img"
+                    alt="...">
+                <div class="card-body">
+                    <h3 class="card-title dark-text">Cold Cucumber Soup</h3>
+                    <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
+
+                    <h4 class="card-body">Ingredients:</h4>
+                    <ul>
+                        <li>Cucumbers</li>
+                        <li>Nonfat Greek Yogurt</li>
+                        <li>Shallot</li>
+                        <li>Herbs</li>
+                        <li>Lemon Juice</li>
+                        <li>Olive Oil</li>
+                        <li>Salt and Pepper</li>
+                        <li>Walnut-Cucumber Garnish</li>
+                    </ul>
+                    <img src="assets/images/recipes/cold-cucumber-soup-ingredients.webp"
+                        class="card-img-top recipe-details-img" alt="...">
+                    <h4 class="card-body">Preparation:</h4>
+                    <ol>
+                        <li>
+                            <p><strong>Prep the Cucumbers:</strong> Cut a 4-inch piece off one of the cucumbers. Halve
+                                it, remove
+                                the seeds, and finely chop it for the garnish. Peel the remaining cucumbers, seed
+                                them, and roughly chop.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>Blend the Soup:</strong> Put the peeled cucumber, yogurt, shallot, herbs, lemon
+                                juice, olive oil, salt, and pepper in the blender and blend until completely smooth. If
+                                it’s too thick, add a little water until it’s at your desired consistency.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>Refrigerate the cucumber soup</strong> for at least 4 hours or as long as
+                                overnight.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>Before serving the soup,</strong> stir it, check the seasoning, and add more salt
+                                and pepper if necessary.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>Prep the Cucumbers:</strong> Cut a 4-inch piece off one of the cucumbers. Halve
+                                it, remove
+                                the seeds, and finely chop it for the garnish. Peel the remaining cucumbers, seed
+                                them, and roughly chop.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>Walnut Garnish:</strong> Toss the reserved cucumber, walnuts, oil, and a pinch of
+                                salt in a small bowl.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>How to Serve Cucumber Soup: </strong> Pour the soup into bowls, gently spoon the
+                                garnish on top, and top with fresh dill.</p>
+                        </li>
+                    </ol>
+
                 </div>
             </div>
         </div>
+
+
+        <!-- Section for (Raspberry Mousse) Recipe -->
+        <div class="recipe-content" id="two">
+            <div class="card card-light" id="recipes-header-card">
+                <img src="assets/images/recipes/raspberry-mousse.webp" class="card-img-top recipe-details-img"
+                    alt="...">
+                <div class="card-body">
+                    <h3 class="card-title dark-text">Raspberry Mousse</h3>
+                    <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
+
+                    <h4 class="card-body">Ingredients:</h4>
+                    <ul>
+                        <li>2 gelatine leaves</li>
+                        <li>350g raspberries, plus extra for decorating</li>
+                        <li>60g caster sugar</li>
+                        <li>1 lemon, juiced</li>
+                        <li>500ml whipping cream</li>
+                    </ul>
+                    <img src="assets/images/recipes/raspberry-mousse-ingredients.jpg"
+                        class="card-img-top recipe-details-img" alt="...">
+                    <h4 class="card-body">Preparation:</h4>
+                    <ol>
+                        <li>
+                            <p>Put the gelatine leaves in a bowl, cover with warm water and leave to soak for 5 mins.
+                                Drain and squeeze out any excess water.</p>
+                        </li>
+
+                        <li>
+                            <p>Tip the raspberries into a pan over a medium-low heat along with the sugar and lemon
+                                juice. Cook for 5-6 mins until the berries have completely broken down.</p>
+                        </li>
+
+                        <li>
+                            <p>Push the mixture
+                                through a sieve set over a bowl, discarding the seeds.</p>
+                        </li>
+
+                        <li>
+                            <p>Stir in the gelatine leaves until
+                                dissolved (if they don’t dissolve, pour the mixture into a clean saucepan and heat
+                                gently until dissolved). Set aside to cool for 15 mins.</p>
+                        </li>
+
+
+                        <li>
+                            <p>Whip the cream to soft peaks using an electric whisk, then gently fold this into the
+                                raspberry mixture. Spoon into the ramekins or moulds and chill overnight, or for at
+                                least 6 hrs.</p>
+                        </li>
+
+                        <li>
+                            <p>Serve with raspberries scattered over the top.</p>
+                        </li>
+
+                    </ol>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <!-- Section for (Zucchini Lasagna) Recipe -->
+        <div class="recipe-content" id="three">
+            <div class="card card-light" id="recipes-header-card">
+                <img src="assets/images/recipes/zucchini-lasagna.jpg" class="card-img-top recipe-details-img" alt="...">
+                <div class="card-body">
+                    <h3 class="card-title dark-text">Zucchini Lasagna</h3>
+                    <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
+
+                    <h4 class="card-body">Ingredients:</h4>
+                    <ul>
+                        <li>Zucchini</li>
+                        <li>Seasonings</li>
+                        <li>Beef</li>
+                        <li>Fresh produce</li>
+                        <li>Frozen spinach</li>
+                        <li>Tomato products</li>
+                        <li>Cheese</li>
+                        <li>Egg</li>
+                    </ul>
+                    <img src="assets/images/recipes/zucchini-lasagna-ingredients.jpg"
+                        class="card-img-top recipe-details-img" alt="...">
+                    <h4 class="card-body">Preparation:</h4>
+                    <ol>
+                        <li>
+                            <p>Slice, salt, and drain the zucchini.</p>
+                        </li>
+
+                        <li>
+                            <p>Make the meat sauce.</p>
+                        </li>
+
+                        <li>
+                            <p>Make the tomato sauce.</p>
+                        </li>
+
+                        <li>
+                            <p>Make the ricotta mixture.</p>
+                        </li>
+
+                        <li>
+                            <p>Assemble the zucchini lasagna according to the detailed instructions in the recipe.</p>
+                        </li>
+
+                        <li>
+                            <p>Bake according to the recipe. </p>
+                        </li>
+                    </ol>
+
+                </div>
+            </div>
+        </div>
+
+
+
     </main>
 
     <!-- Footer -->
