--- a/recipes.html
+++ b/recipes.html
@@ -88,255 +88,53 @@
       <div class="row g-2">
 
         <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="recipe.html" class="recipe-link">
+          <a href="recipe.html#one" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec1.jpg" class="recipe-img" alt="...">
+                <img src="assets/images/recipes/cold-cucumber-soup.jpg" class="recipe-img" alt="...">
               </div>
             </div>
           </a>
         </div>
         <div class="col-6 col-sm-6 col-md-6 col-lg-3">
           <div class="card-body">
-
-            <label for="tog">Toggle</label>
-            <input type="checkbox" id="tog">
-            <div id="content">TEXT</div>
-
-            <!--<h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>-->
+            <h3 class="card-title dark-text">Cold Cucumber Soup</h3>
+            <p> Side Dish</p>
           </div>
         </div>
 
 
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
-          <a href="#" class="recipe-link">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
+          <a href="recipe.html#two" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec2.jpg" class="recipe-img" alt="...">
+                <img src="assets/images/recipes/raspberry-mousse.webp" class="recipe-img" alt="...">
               </div>
             </div>
           </a>
         </div>
         <div class="col-6 col-sm-6 col-md-6 col-lg-3">
           <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
+            <h3 class="card-title dark-text">Raspberry Mousse</h3>
+            <p>Dessert</p>
           </div>
         </div>
 
 
 
         <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
+          <a href="recipe.html#three" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec3.jpg" class="recipe-img" alt="...">
+                <img src="assets/images/recipes/zucchini-lasagna.jpg" class="recipe-img" alt="...">
               </div>
             </div>
           </a>
         </div>
         <div class="col-6 col-sm-6 col-md-6 col-lg-3">
           <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec4.jpg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec5.jpg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec6.jpg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec7.jpg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec8.jpg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec9.jpg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec10.jpg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="recipe.html" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec11.jpg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec12.jpg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec13.jpg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
-          </div>
-        </div>
-
-
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
-          <a href="#" class="recipe-link">
-            <div class="p-3 recipe-card-container">
-              <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec14.jpg" class="recipe-img" alt="...">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Falafel</h3>
-            <p> This recipe is for falafel in details</p>
+            <h3 class="card-title dark-text">Zucchini Lasagna</h3>
+            <p>Main Dish</p>
           </div>
         </div>
 
