Update menu button style

--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
 
 
         <input id="menu-button" type="checkbox">
-        <label for="menu-button"><span class="navbar-toggler-icon navbar-toggler"></span></label>
+        <label for="menu-button">
+          <span class="navbar-toggler">
+            <i class="fas fa-bars menu-button-open"></i>
+            <i class=" menu-button-close">x</i>
+          </span>
+
+        </label>
+
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -76,16 +83,12 @@
 
 
 
-    
+    <h3 class="card-title dark-text">What is Gluten?</h3>
+
     <div class="card card-light" id="card1">
       <img src="assets/images/gf-1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h3 class="card-title dark-text">What is Gluten?</h3>
-        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to
-          additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.
-          This content is a little bit longer.</p>
+        <p class="card-text dark-text">TGluten is a group of proteins found in wheat, barley, rye, and related grains. It’s what gives dough its elasticity, allowing it to rise and maintain its shape, and gives bread its chewy texture. While gluten is a common component in many foods, it’s important to know that some people may have sensitivities or conditions like celiac disease that require them to avoid it. Whether you’re looking to learn more about gluten, manage a gluten-free diet, or simply explore gluten’s role in your food, our site offers valuable insights and resources to help you make informed choices.</p>
       </div>
     </div>
 
@@ -112,7 +115,7 @@
       </div>
     </div>
 
-
+<!-- 
     <div class="card card-dark" id="card4">
       <div class="card-body">
         <h3 class="card-title dark-text">Life with gluten-free diet</h3>
@@ -123,7 +126,7 @@
           health are truly inspiring, and with every mindful choice, you are setting a powerful example of resilience
           and self-love. Keep going—you’ve got this!​</p>
       </div>
-    </div>
+    </div> -->
 
 
   </main>
