--- a/signup.html
+++ b/signup.html
@@ -26,6 +26,10 @@
       <!-- Linking CSS Styling -->
   <link rel="stylesheet" href="assets/css/style.css">
 
+      <!-- Linking FontAwosome -->
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+
+
 
 <body>
 
@@ -40,9 +44,14 @@
           <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
           <p>GluteniPedia</p></a>
 
-        <input id="menu-button" type="checkbox">
-        <label for="menu-button"><span class="navbar-toggler-icon navbar-toggler"></span></label>
-
+          <input id="menu-button" type="checkbox">
+          <label for="menu-button">
+            <span class="navbar-toggler">
+              <span class="fas fa-bars menu-button-open"></span>
+              <span class="fas fa-xmark menu-button-close"></span>
+            </span>
+  
+          </label>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
