--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
     href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-
   <!-- Linking Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
   <!-- Linking CSS Styling -->
   <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Linking FontAwosome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+
 
 
 <body>
@@ -43,8 +46,8 @@
         <input id="menu-button" type="checkbox">
         <label for="menu-button">
           <span class="navbar-toggler">
-            <i class="fas fa-bars menu-button-open"></i>
-            <i class=" menu-button-close">x</i>
+            <span class="fas fa-bars menu-button-open"></span>
+            <span class="fas fa-xmark menu-button-close"></span>
           </span>
 
         </label>
@@ -157,7 +160,6 @@
   </footer>
 
   <!-- Font Awesome kit -->
-  <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 
 </body>
 
