--- a/recipes.html
+++ b/recipes.html
@@ -26,6 +26,9 @@
   <!-- Linking CSS Styling -->
   <link rel="stylesheet" href="assets/css/style.css">
 
+      <!-- Linking FontAwosome -->
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+
 
 <body>
 
@@ -40,10 +43,14 @@
           <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
           <p>GluteniPedia</p>
         </a>
-
         <input id="menu-button" type="checkbox">
-        <label for="menu-button"><span class="navbar-toggler-icon navbar-toggler"></span></label>
+        <label for="menu-button">
+          <span class="navbar-toggler">
+            <span class="fas fa-bars menu-button-open"></span>
+            <span class="fas fa-xmark menu-button-close"></span>
+          </span>
 
+        </label>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -75,9 +82,9 @@
   <main>
 
     <div class="card card-light" id="recipes-header-card">
-      <img src="assets/images/eating-delicous.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h3 class="card-title dark-text">Let's enjoy delicious recipes!</h3>
+        <img src="assets/images/eating-delicous.jpg" class="card-img-top" alt="...">
 
         <p class="card-body dark-text">Here you are some delicious gluten-free recipe ideas that you can try,
           whether you are looking for breakfast, lunch, dinner, or even snacks.</p>
@@ -87,56 +94,83 @@
     <div class="container text-center">
       <div class="row g-2">
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-6 recipe-div">
           <a href="recipe.html#one" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
                 <img src="assets/images/recipes/cold-cucumber-soup.jpg" class="recipe-img" alt="...">
+                <div class="card-body">
+                  <h3 class="card-title dark-text">Cold Cucumber Soup</h3>
+                  <p> Side Dish</p>
+                </div>
               </div>
             </div>
           </a>
         </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Cold Cucumber Soup</h3>
-            <p> Side Dish</p>
-          </div>
-        </div>
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-6 recipe-div">
           <a href="recipe.html#two" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
                 <img src="assets/images/recipes/raspberry-mousse.webp" class="recipe-img" alt="...">
+                <div class="card-body">
+                  <h3 class="card-title dark-text">Raspberry Mousse</h3>
+                  <p>Dessert</p>
+                </div>
               </div>
             </div>
           </a>
         </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Raspberry Mousse</h3>
-            <p>Dessert</p>
-          </div>
-        </div>
+  
 
 
 
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3 recipe-div">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-6 recipe-div">
           <a href="recipe.html#three" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
                 <img src="assets/images/recipes/zucchini-lasagna.jpg" class="recipe-img" alt="...">
+                <div class="card-body">
+                  <h3 class="card-title dark-text">Zucchini Lasagna</h3>
+                  <p>Main Dish</p>
+                </div>
               </div>
             </div>
           </a>
         </div>
-        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
-          <div class="card-body">
-            <h3 class="card-title dark-text">Zucchini Lasagna</h3>
-            <p>Main Dish</p>
-          </div>
+
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-6 recipe-div">
+          <a href="recipe.html#four" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec1.jpg" class="recipe-img" alt="...">
+                <div class="card-body">
+                  <h3 class="card-title dark-text">Zucchini Lasagna</h3>
+                  <p>Main Dish</p>
+                </div>
+              </div>
+            </div>
+          </a>
         </div>
+
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-6 recipe-div">
+          <a href="recipe.html#five" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec2.jpg" class="recipe-img" alt="...">
+                <div class="card-body">
+                  <h3 class="card-title dark-text">Zucchini Lasagna</h3>
+                  <p>Main Dish</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+
 
       </div>
     </div>
