Add none-dummy content in landing page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Linking CSS Styling -->
   <link rel="stylesheet" href="assets/css/style.css">
 
-    <!-- Linking FontAwosome -->
+  <!-- Linking FontAwosome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
 
 
@@ -86,12 +86,17 @@
 
 
 
-    <h3 class="card-title dark-text">What is Gluten?</h3>
 
     <div class="card card-light" id="card1">
-      <img src="assets/images/gf-1.jpg" class="card-img-top" alt="...">
+      <h3 class="card-title dark-text">What is Gluten?</h3>
+      <img src="assets/images/gluten-samples.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text dark-text">TGluten is a group of proteins found in wheat, barley, rye, and related grains. It’s what gives dough its elasticity, allowing it to rise and maintain its shape, and gives bread its chewy texture. While gluten is a common component in many foods, it’s important to know that some people may have sensitivities or conditions like celiac disease that require them to avoid it. Whether you’re looking to learn more about gluten, manage a gluten-free diet, or simply explore gluten’s role in your food, our site offers valuable insights and resources to help you make informed choices.</p>
+        <p class="card-text dark-text">Gluten is a group of proteins found in wheat, barley, rye, and related grains.
+          It’s what gives dough its elasticity, allowing it to rise and maintain its shape, and gives bread its chewy
+          texture. While gluten is a common component in many foods, it’s important to know that some people may have
+          sensitivities or conditions like celiac disease that require them to avoid it. Whether you’re looking to learn
+          more about gluten, manage a gluten-free diet, or simply explore gluten’s role in your food, our site offers
+          valuable insights and resources to help you make informed choices.</p>
       </div>
     </div>
 
@@ -108,17 +113,19 @@
 
 
     <div class="card card-light" id="card3">
-      <img src="assets/images/Symptoms.webp" class="card-img-top" alt="...">
+      <h3 class="card-title dark-text">Red Flag Symptoms</h3>
+      <img src="assets/images/symptoms-1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h3 class="card-title dark-text">Celiac Diagnose</h3>
-        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to
-          additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
-          additional content.</p>
+        <p class="card-text dark-text">Celiac disease and gluten intolerance can manifest through a variety of symptoms,
+          affecting both the digestive system and other parts of the body. Common symptoms include bloating, diarrhea,
+          constipation, and abdominal pain. People with these conditions might also experience fatigue, headaches, and
+          joint pain. In some cases, gluten can lead to skin rashes, mood changes, and nutrient deficiencies. It’s
+          important to note that symptoms can vary widely from person to person, making it crucial to consult with a
+          healthcare provider for an accurate diagnosis and appropriate dietary management.</p>
       </div>
     </div>
 
-<!-- 
+    <!-- 
     <div class="card card-dark" id="card4">
       <div class="card-body">
         <h3 class="card-title dark-text">Life with gluten-free diet</h3>
@@ -158,9 +165,6 @@
       </li>
     </ul>
   </footer>
-
-  <!-- Font Awesome kit -->
-
 </body>
 
 </html>
