--- a/recipe.html
+++ b/recipe.html
@@ -85,7 +85,7 @@
 
         <!-- Section for (Cold Cucumber Soup) Recipe -->
         <div class="recipe-content" id="one">
-            <div class="card card-light" id="recipes-header-card">
+            <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Cold Cucumber Soup</h3>
                 <img src="assets/images/recipes/cold-cucumber-soup.jpg" class="card-img-top recipe-details-img"
                     alt="...">
@@ -155,7 +155,7 @@
 
         <!-- Section for (Raspberry Mousse) Recipe -->
         <div class="recipe-content" id="two">
-            <div class="card card-light" id="recipes-header-card">
+            <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Raspberry Mousse</h3>
                 <img src="assets/images/recipes/raspberry-mousse.webp" class="card-img-top recipe-details-img"
                     alt="...">
@@ -217,7 +217,7 @@
 
         <!-- Section for (Zucchini Lasagna) Recipe -->
         <div class="recipe-content" id="three">
-            <div class="card card-light" id="recipes-header-card">
+            <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Zucchini Lasagna</h3>
 
                 <img src="assets/images/recipes/zucchini-lasagna.jpg" class="card-img-top recipe-details-img" alt="...">
@@ -296,10 +296,6 @@
             </li>
         </ul>
     </footer>
-
-    <!-- Font Awesome kit -->
-    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
