--- a/recipes.html
+++ b/recipes.html
@@ -81,7 +81,7 @@
   <!-- Main Section -->
   <main>
 
-    <div class="card card-light" id="recipes-header-card">
+    <div class="card card-light recipes-header-card">
       <div class="card-body">
         <h3 class="card-title dark-text">Let's enjoy delicious recipes!</h3>
         <img src="assets/images/eating-delicous.jpg" class="card-img-top" alt="...">
@@ -201,8 +201,6 @@
     </ul>
   </footer>
 
-  <!-- Font Awesome kit -->
-  <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 
 </body>
 
