--- a/celebrities.html
+++ b/celebrities.html
@@ -83,9 +83,6 @@
     <!-- Main Section -->
     <main>
 
-
-
-
         <div class="card card-light" id="celebrities-header-card">
             <img src="assets/images/fans.webp" class="card-img-top" alt="...">
             <div class="card-body">
@@ -113,7 +110,6 @@
                 </p>
             </div>
         </div>
-
 
         <div class="container text-center">
             <div class="row g-2">
@@ -274,7 +270,7 @@
 
 
                 <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href=https://en.wikipedia.org/wiki/Burcu_Esmersoy" target="_blank" class="celebrity-link">
+                    <a href="https://en.wikipedia.org/wiki/Burcu_Esmersoy" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/burcu-esmersoy.jpg" class="celebrity-img" alt="...">
@@ -291,9 +287,9 @@
                     <a href="https://en.wikipedia.org/wiki/Nurg%C3%BCl_Ye%C5%9Fil%C3%A7ay" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/nurgül-yeşilçay.webp" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/nurgul-yesilcay.webp" class="celebrity-img" alt="...">
                                 <div class="card-body">
-                                <h3 class="card-title dark-text">Nurgül Yeşilçay</h3>
+                                <h3 class="card-title dark-text">Nurgul Yesilcay</h3>
                                 </div>
                             </div>
                         </div>
@@ -319,9 +315,9 @@
                     <a href="https://en.wikipedia.org/wiki/Ece_Vahapo%C4%9Flu" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/ece-vahapoğlu.webp" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/ece-vahapoglu.webp" class="celebrity-img" alt="...">
                                 <div class="card-body">
-                                <h3 class="card-title dark-text">Ece Vahapoğlu</h3>
+                                <h3 class="card-title dark-text">Ece Vahapoglu</h3>
                                 </div>
                             </div>
                         </div>
@@ -429,11 +425,6 @@
             </div>
         </div>
 
-
-
-
-        </div>
-        </div>
     </main>
 
     <!-- Footer -->
@@ -460,10 +451,6 @@
             </li>
         </ul>
     </footer>
-
-    <!-- Font Awesome kit -->
-    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
