Add recipes section to landing page

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
   <!-- Linking FontAwosome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
-
-
+</head>
 
 <body>
   <!-- Header Section -->
@@ -91,7 +90,7 @@
         <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div">
           <a href="diagnose.html" target="_blank" class="">
             <div>
-              <img src="assets/images/gluten-samples.jpg" id="lp-div1-img" alt="...">
+              <img src="assets/images/gluten-samples.jpg" class="lp-div-img" alt="...">
             </div>
           </a>
         </div>
@@ -121,7 +120,7 @@
         <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div lp-div-img-vertical">
           <a href="diagnose.html" target="_blank" class="">
             <div>
-              <img src="assets/images/symptoms-1.jpg" id="lp-div1-img" alt="...">
+              <img src="assets/images/symptoms-1.jpg" class="lp-div-img" alt="...">
             </div>
           </a>
         </div>
@@ -131,9 +130,12 @@
             <h3>Red Flag Symptoms</h3>
           </div>
           <div>
-            <p class="card-text dark-text">Celiac disease and gluten intolerance can manifest through a variety of symptoms,
-              affecting both the digestive system and other parts of the body. Common symptoms include bloating, diarrhea,
-              constipation, and abdominal pain. People with these conditions might also experience fatigue, headaches, and
+            <p class="card-text dark-text">Celiac disease and gluten intolerance can manifest through a variety of
+              symptoms,
+              affecting both the digestive system and other parts of the body. Common symptoms include bloating,
+              diarrhea,
+              constipation, and abdominal pain. People with these conditions might also experience fatigue, headaches,
+              and
               joint pain. In some cases, gluten can lead to skin rashes, mood changes, and nutrient deficiencies. It’s
               important to note that symptoms can vary widely from person to person, making it crucial to consult with a
               healthcare provider for an accurate diagnosis and appropriate dietary management.</p>
@@ -143,25 +145,34 @@
         <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div lp-div-img-horizontal">
           <a href="diagnose.html" target="_blank" class="">
             <div>
-              <img src="assets/images/symptoms-1.jpg" id="lp-div1-img" alt="...">
+              <img src="assets/images/symptoms-1.jpg" class="lp-div-img" alt="...">
             </div>
           </a>
         </div>
 
 
 
-        <!-- 
-    <div class="card card-dark" id="card4">
-      <div class="card-body">
-        <h3 class="card-title dark-text">Life with gluten-free diet</h3>
-        <p class="card-text dark-text"><strong>Living with a gluten-free diet may sometimes feel challenging, but remember, you
-          are taking control of your health and well-being, which is an incredible act of self-care. Every meal you
-          choose is a step towards a healthier, happier you. Embrace the journey with confidence, knowing that you are
-          not alone—millions of people are thriving on this path alongside you. Your strength and commitment to your
-          health are truly inspiring, and with every mindful choice, you are setting a powerful example of resilience
-          and self-love. Keep going—you’ve got this!​</p>
-      </div>
-    </div> -->
+        <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div">
+          <a href="recipes.html" target="_blank" class="">
+            <div>
+              <img src="assets/images/having-dinner-on-table.jpg" class="lp-div-img" alt="...">
+            </div>
+          </a>
+        </div>
+
+        <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div">
+          <div class="p-3 landing-page-card-container">
+            <h3>Explore Our Gluten-Free Recipes</h3>
+          </div>
+          <div>
+            <p class="card-text dark-text">Looking for delicious and satisfying meals without the gluten? Our
+              gluten-free recipes page is your go-to resource for tasty, nutritious dishes that everyone can enjoy.
+              Whether you’re new to a gluten-free lifestyle or a seasoned pro, you’ll find a wide range of recipes, from
+              hearty breakfasts to indulgent desserts, all carefully crafted to be free from gluten. Click here to
+              discover easy-to-follow recipes that will make your gluten-free journey both flavorful and fun!</p>
+          </div>
+        </div>
+
 
       </div>
     </div>
