--- a/index.html
+++ b/index.html
@@ -178,31 +178,31 @@
     </div>
 
 
+
+
   </main>
 
   <!-- Footer -->
   <footer>
     <ul id="footer-bar">
       <li>
-        <a href="#" rel="noopener" aria-label="">
+        <a href="about.html" rel="noopener" aria-label="">
           About</a>
-      </li>
-
-      <li>
-        <a href="#" rel="noopener" aria-label="">
-          Contact Us</a>
-      </li>
-
-      <li>
-        <a href="#" rel="noopener" aria-label="">
-          Conditions and Terms</a>
       </li>
 
       <li>
         <a href="#" rel="noopener" aria-label="">
           Privacy Policy</a>
       </li>
+
+      <li>
+        <a href="#" rel="noopener" aria-label="">
+          Contact Us</a>
+
+      </li>
     </ul>
+
+
   </footer>
 </body>
 
