Add privacy policy page with content

--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
 
 
       <li>
-        <a href="#" rel="noopener"
+        <a href="privacy-policy.html" rel="noopener"
           aria-label="">
           Privacy Policy</a>
       </li>
