--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       </li>
 
       <li>
-        <a href="#" rel="noopener" aria-label="">
+        <a href="privacy-policy.html" rel="noopener" aria-label="">
           Privacy Policy</a>
       </li>
 
