Add brands slideshow to landing page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="signup.html">SignUp</a>
+              <a class="nav-link" href="subscribe.html">Subscribe</a>
             </li>
           </ul>
         </div>
@@ -81,6 +81,7 @@
 
   <!-- Main Section -->
   <main>
+
     <img src="assets/images/family-gathering-to-eat.jpg" id="bg-img" alt="family eating together">
 
     <div class="container text-center">
@@ -179,6 +180,17 @@
 
 
 
+
+    <div id="slideshow">
+      <div class="slide-wrapper">
+        <div class="slide"><h1 class="slide-number">1</h1></div>
+        <div class="slide"><h1 class="slide-number">2</h1></div>
+        <div class="slide"><h1 class="slide-number">3</h1></div>
+        <div class="slide"><h1 class="slide-number">4</h1></div>
+        <div class="slide"><h1 class="slide-number">5</h1></div>
+      </div>
+    </div>
+    <h3 id="slideshow-caption">Gluten-Free Brands</h3>
 
   </main>
 
