--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GluteniPedia - Signup</title>
+  <title>GluteniPedia - Privacy Policy</title>
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -70,7 +70,7 @@
               </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="signup.html">SignUp</a>
+              <a class="nav-link" href="subscribe.html">Subscribe</a>
             </li>
           </ul>
         </div>
