--- a/recipes.html
+++ b/recipes.html
@@ -69,7 +69,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="signup.html">SignUp</a>
+              <a class="nav-link" href="subscribe.html">Subscribe</a>
             </li>
           </ul>
         </div>
