--- a/index.html
+++ b/index.html
@@ -183,14 +183,21 @@
 
     <div id="slideshow">
       <div class="slide-wrapper">
-        <div class="slide"><h1 class="slide-number">1</h1></div>
-        <div class="slide"><h1 class="slide-number">2</h1></div>
-        <div class="slide"><h1 class="slide-number">3</h1></div>
-        <div class="slide"><h1 class="slide-number">4</h1></div>
-        <div class="slide"><h1 class="slide-number">5</h1></div>
+        <div class="slide">
+          <img src="assets/images/brands/schar-logo.jpg" alt="" class="slideshow-img">
+        </div>
+        <div class="slide">
+          <img src="assets/images/brands/yoplait-logo.jpg" alt="" class="slideshow-img">
+        </div>
+        <div class="slide">
+          <img src="assets/images/brands/free-from-tesco-brand.jpg" alt="" class="slideshow-img">
+        </div>
+        <div class="slide">
+          <img src="assets/images/brands/promise-logo.png" alt="" class="slideshow-img">
+        </div>
       </div>
     </div>
-    <h3 id="slideshow-caption">Gluten-Free Brands</h3>
+    <h3 id="slideshow-caption">Brands with Gluten-Free options</h3>
 
   </main>
 
